--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Yastodon(ヤストドン)</title>
         <link rel="stylesheet" href="/css/style.css">
-        <meta charset='utf-8'>
+        <meta charset="utf-8">
     </head>
     <body>
         <div class="wrapper">
